[tool.poetry]
name = "pwmled"
version = "1.6.10"
description = "Control LEDs connected to a micro controller using pwm."
authors = ["soldag <soren.oldag@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/soldag/python-pwmled"
repository = "https://github.com/soldag/python-pwmled"
keywords = ["pwm", "light", "gpio", "pca9685"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
adafruit-blinka = ">=5.5.1,<8.0"
adafruit-circuitpython-pca9685 = ">=3.3.2,<4.0"
pigpio = ">=1.78,<2.0"
python-singleton = ">=0.1.2,<1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
